--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     --transparent: #00000000;
     --red: #FF3C2B;
     --green: #99D84D;
+    --search-box-background: #ff0066;
     --background-color: #1b2e2e;
     --foreground-color: #ffffff;
     --background-dark-color: #142222;
@@ -97,14 +98,52 @@ input {
 
 .search-box-container {
     display: none;
-    height: 25%;
+    height: fit-content;
+    max-height: 80%;
     width: 95%;
     position: absolute;
     top: 10%;
     right: 0;
     left: 0;
     margin: auto;
-    background-color: orange;
-    border: 2px solid #101010;
+    background-color: var(--search-box-background);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 5px;
+    overflow: visible;
+}
+
+#search-input {
+    border: hidden;
+}
+#search-input:focus {
+    outline: none;
+}
+
+.search-result {
+    background-color: var(--search-box-background);
+    color: var(--foreground-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3vh;
+    width: 100%;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+}
+
+.selected {
+    text-decoration: underline;
+    text-decoration-color: var(--foreground-color);
+}
+
+.search-result-index {
+    display: none;
+}
+
+hr {
+    height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
