--- a/index.css
+++ b/index.css
@@ -142,8 +142,23 @@ input {
     display: none;
 }
 
+.invisible {
+    display: none;
+}
+
 hr {
     height: 12px;
     border: 0;
     box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+}
+
+.title {
+    color: var(--foreground-color);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 3%;
+    text-align: center;
+    font-size: 5vh;
+    margin: auto;
 }
