--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 :root {
     --transparent: #00000000;
-    --red: #FF3C2B;
-    --green: #99D84D;
-    --search-box-background: #ff0066;
-    --background-color: #1b2e2e;
+    --red: #FF383B;
+    --green: #56D861;
+    --search-box-background: #4dff81;
+    --background-color: #212425;
+    --main-background-color: #181a1b;
     --foreground-color: #ffffff;
-    --background-dark-color: #142222;
-    --background-light-color: #386060;
+    --foreground-title-color: #FFC300;
+    --background-dark-color: #ff4dcb;
 }
 
 * {
@@ -20,7 +21,7 @@ html, body, .content {
 }
 
 .content {
-    background-color: var(--background-dark-color);
+    background-color: var(--main-background-color);
 }
 
 .main-container {
@@ -28,23 +29,25 @@ html, body, .content {
     width: 90%;
     height: 80%;
     position: absolute;
-    top: 0;
+    top: 5%;
     bottom: 0;
     right: 0;
     left: 0;
     margin: auto;
     border-radius: 5px;
     overflow: hidden;
-    /* box-shadow: 5px 5px var(--background-light-color); */
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
+    /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
+    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
 }
 
 .stripe-container {
     background-color: var(--red);
-    height: 2%;
+    height: 3vh;
 }
 .question-latex-container {
     background-color: var(--background-color);
-    height: 39%;
+    height: 37%;
     color: var(--foreground-color);
     font-size: 5vw;
     display: flex;
@@ -52,7 +55,10 @@ html, body, .content {
     align-items: center;
 }
 .answer-latex-container {
-    background-color: var(--background-color);
+    background-color: var(--background-dark-color);
+    margin: 20px;
+    margin-bottom: 0px;
+    border-radius: 5px;
     height: 39%;
     color: var(--foreground-color);
     font-size: 5vw;
@@ -61,8 +67,10 @@ html, body, .content {
     align-items: center;
 }
 .answer-plain-container {
-    background-color: var(--background-light-color);
-    height: 20%;
+    background-color: var(--background-color);
+    height: 17%;
+    margin: 20px;
+    margin-top: 0px;
 }
 input {
     width: 100%;
@@ -72,6 +80,10 @@ input {
     color: var(--foreground-color);
     text-align: center;
     font-size: 3vw;
+    border: hidden;
+}
+input:focus {
+    outline: none;
 }
 
 .icon-button {
@@ -112,13 +124,6 @@ input {
     overflow: visible;
 }
 
-#search-input {
-    border: hidden;
-}
-#search-input:focus {
-    outline: none;
-}
-
 .search-result {
     background-color: var(--search-box-background);
     color: var(--foreground-color);
@@ -152,13 +157,21 @@ hr {
     box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
 
+@font-face {
+    font-family: "league_gothic";
+    src: url(./vendor/league-gothic.regular.ttf);
+}
+
 .title {
-    color: var(--foreground-color);
+    background-color: var(--main-background-color);
+    font: 10vh league_gothic, Sans-Serif;
     position: absolute;
     right: 0;
     left: 0;
-    top: 3%;
+    top: 1%;
     text-align: center;
-    font-size: 5vh;
     margin: auto;
+    color: rgba(26, 177, 255, 0.5);
+    text-shadow: 3px 3px 0 #FF00B4;
+    text-transform: uppercase;
 }
