--- a/index.css
+++ b/index.css
@@ -176,7 +176,7 @@ hr {
 
 @font-face {
     font-family: "league_gothic";
-    src: url(./fonts/league-gothic.regular.ttf);
+    src: url("./vendor/fonts/league-gothic.regular.ttf");
 }
 
 .title {
